fix(forward): ASCII-only escape digits and an ordered raw query-pair sequence
Two CodeRabbit findings on PR #334 (AS-13 raw-query hand-off):

- e880d1 (CWE-20): the query-name decode used Character.digit, which also
  admits full-width and other non-ASCII digits, so %<U+FF17><U+FF14>oken
  decoded to "token" and was admitted by query_allow: [token] on a minimal
  route. Escapes now accept only ASCII 0-9/A-F/a-f; such a name has no
  decoded form and is withheld under both lists (crosses only forward-all).
- 33e81b: the query was a name-keyed map, so a=1&b=2&a=3 was forwarded as
  a=1&a=3&b=2. PipelineRequest now carries an ordered List<QueryParameter>
  in wire order; the edge builds it, the forward policy filters it pair by
  pair and the render emits it in order. BasicChecksStage counts pairs and
  ThoroughChecksStage validates each pair where it stands.

ADR-0047, configuration.adoc and the threat model record the pair sequence
and the ASCII-only HEXDIG rule; unit and live-edge tests pin both.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NdTTGdPbSBHZgLQriTVZMA